Bug 1122566 - Make e10s behave the same as single-process in case of an ftp:// error. r=bagder